[gd_scene load_steps=5 format=3 uid="uid://c30cy572ia76c"]

[ext_resource type="Script" uid="uid://gjskf8syf8d8" path="res://upgrade.gd" id="1_w52ek"]
[ext_resource type="Texture2D" uid="uid://cwom7w0woy2f3" path="res://Grid.png" id="2_hgitt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hgitt"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(3.65794e-06, 0.934057, 0.742428, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_hgitt"]
Panel/styles/panel = SubResource("StyleBoxFlat_hgitt")

[node name="Upgrade" type="Button"]
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(20, 20)
theme = SubResource("Theme_hgitt")
icon = ExtResource("2_hgitt")
icon_alignment = 1
expand_icon = true
script = ExtResource("1_w52ek")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
